# human_aware_navigation

./: LICENSE  README.md
bayes_people_tracker/config/: object3d_detector.yaml
bayes_people_tracker/src/people_tracker/: people_tracker.cpp
bayestracking/examples/: simple_2d_tracking.cpp
bayestracking/include/bayes_tracking/: models.h  multitracker.h  trackwin.h
bayestracking/src/bayes_tracking/: models.cpp  trackwin.cpp
darknet_ros/darknet/: Makefile
darknet_ros/darknet_ros/config/: ros.yaml  yolov2-tiny.yaml  yolov2.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
hardware/: Angle.SLDPRT  Camera-holder.SLDPRT  Camera_BasePlate.SLDPRT  Camera_Holder.SLDPRT  Camera_Holder.STL  MTi-680G-BasePlate.SLDPRT  Profile 10x10x100.SLDPRT  Profile cube.SLDPRT  Profile length 10x10x200.SLDPRT  Profile vertical 1 10x10x100.SLDPRT  Profile vertical 2 10x10x100.SLDPRT  Profile vertical 3 10x10x150.SLDPRT  Profile width 10x10x200.SLDPRT  RS-16-Lidar-BasePlate.SLDPRT  RS-16-Lidar-holder.SLDPRT  equations.txt
hardware/Body/Nose/: Angle nose 1.SLDPRT  Forward holder.SLDPRT  Nose part 1.SLDPRT  Nose part 2.SLDPRT  Nose part 3.SLDPRT
hardware/Body/Plate/: BasePlate.SLDPRT  stand plate back 1.SLDPRT  stand plate back 2.SLDPRT  stand plate foward.SLDPRT  stand plate foward.STL
hardware/Body/Skirt/: Angle skirt 15.SLDPRT  Angle skirt 15.STL  Angle skirt 20.SLDPRT  Skirt back part 8.SLDPRT  Skirt back part 9.SLDPRT  Skirt big side 1.SLDPRT  Skirt forward part 2.SLDPRT  Skirt forward part 3.SLDPRT  Skirt forward part 4.SLDPRT  Skirt forward part 4.STL  Skirt middle part 5.SLDPRT  Skirt middle part 7.1.SLDPRT  Skirt middle part 7.1.STL  Skirt screen holder part 10.SLDPRT  (+1 more)
human_aware_navigation/: CMakeLists.txt  README.md  package.xml
human_aware_navigation/cfg/: human_aware_navigation.rviz
human_aware_navigation/launch/: experiment.launch  human_aware_navigation.launch
human_aware_navigation/scripts/: experiment1.py  metrics_list.py
object3d_detector_gpu/: CMakeLists.txt  README.md  package.xml
object3d_detector_gpu/launch/: object3d_detector_gpu.launch
object3d_detector_gpu/model/: pedestrian.model  pedestrian.range
object3d_detector_gpu/src/: object3d_detector_gpu.cpp
rgbd_detection2d_3d/: CMakeLists.txt  README.md  package.xml
rgbd_detection2d_3d/src/: rgbd_detection2d_3d.cpp
rslidar/rslidar_driver/: CMakeLists.txt
