<?xml version="1.0"?>
<package>
  <name>human_aware_navigation</name>
  <version>0.0.1</version>
  <description>LOST-CoRoNa Human-aware Navigation Bringup</description>
  <maintainer email="iaroslav.okunevich@utbm.fr">Iaroslav Okunevich</maintainer>
  <author email="zhi.yan@utbm.fr">Zhi Yan</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
